--- a/frontend/login.html
+++ b/frontend/login.html
@@ -8,24 +8,24 @@
   <script src="js/login.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1 class="app-title">NetZero</h1>
-    <div class="theme-toggle">
-        <label class="switch">
-        <input type="checkbox" id="toggleTheme">
-        <span class="slider"></span>
-        </label>
-    </div>
-  </header>
   <main>
-    <div class="login-box">
-      <h2>Log In to NetZero!</h2>
-      <form id="loginForm">
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
-      <p>Don't have an account? <a href="register.html">Register</a></p>
+
+    <div class="login-1">
+      <div class="logo-main">
+        <img src="images/SBHACKS LOGO1.png" width=50% height="50%">
+      </div>
+    </div>
+
+    <div class="login-2">
+      <div class="login-box">
+        <h2>Log In to NetZero!</h2>
+        <form id="loginForm">
+          <input type="text" name="username" placeholder="Username" required>
+          <input type="password" name="password" placeholder="Password" required>
+          <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+      </div>
     </div>
   </main>
 </body>
